<resources>
    <string name="app_name">Health Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">BMI</string>
    <string name="menu_gallery">Water</string>
    <!--    <string name="menu_slideshow">Slideshow</string>-->

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="daftar">Daftar</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="konfimasi_password">Konfimasi Password</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="login_email">0</string>
    <string name="logout">Logout</string>
    <string name="tambah_bmi">Tambah BMI</string>
    <string name="update_bmi">Update BMI</string>
    <string name="update_water">Update Water</string>
    <string name="tambah_water">Tambah Water</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">Information</string>
</resources>
