<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_bmi">

    <fragment
        android:id="@+id/nav_bmi"
        android:name="com.mercubuana.healthtracker.ui.bmi.BmiFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_bmi">
    </fragment>
    <fragment
        android:id="@+id/nav_water"
        android:name="com.mercubuana.healthtracker.ui.water.WaterFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_water" />
    <fragment
        android:id="@+id/nav_web"
        android:name="com.mercubuana.healthtracker.ui.web.WebFragment"
        android:label="@string/information"
        tools:layout="@layout/fragment_web" />
</navigation>